# gpt-shell

./: .env.local  .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  assistant_snippet_Hs+Hs+Hs+.txt  assistant_snippet_kf2HZXUR3P.txt  build.rs  install.ps1  install_local.ps1  publish.ps1  test.py
.github/workflows/: release.yml
src/: bots.rs  config.rs  llm_provider.rs  main.rs  update.rs  utils.rs
src/agents/: executor.rs  mod.rs  types.rs  ui.rs
template/: config.toml
