[package]
name = "gpt-shell"
version = "0.3.0"
edition = "2021"
authors = ["wangenius <wangenius@qq.com>"]
description = "GPT Shell - command line AI assistant"

[[bin]]
name = "gpt"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
async-openai = "0.14"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
bytes = "1.0"
toml = "0.8"
dirs = "5.0"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[build-dependencies]
winres = "0.1"
